objects/EmployeeSurvey__c.object
<CustomObject>
    <description>The surveys that each employee took.</description>
    <fields>
        <fullName>ClientEmployeeIDFormula__c</fullName>
        <formula>EmploymentPeriod__r.Employee__r.ClientEmployeeID__c</formula>
        <label>Client Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStoreNumberFormula__c</fullName>
        <formula>EntityLocation__r.ClientLocationIDFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Store Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeclinedSurveyBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the employee decline to take the survey?</description>
        <inlineHelpText>Did the employee decline to take the survey?</inlineHelpText>
        <label>Declined Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureDateTime__c</fullName>
        <label>Electronic Signature Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureText__c</fullName>
        <label>Electronic Signature Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectronicSignatureValidatedBit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Signature Validated Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeNameFormula__c</fullName>
        <formula>EmploymentPeriod__r.Employee__r.FirstLastNameFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSSNFormula__c</fullName>
        <formula>EmploymentPeriod__r.Employee__r.SSN__c</formula>
        <label>Employee SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurveyEID__c</fullName>
        <description>The Enterprise ID for this Employee Survey.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Employee Survey.</inlineHelpText>
        <label>Employee Survey EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EmploymentPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period tied to this survey</description>
        <inlineHelpText>The employment period tied to this survey</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmploymentReferenceIDFormula__c</fullName>
        <formula>EmploymentPeriod__r.ReferenceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmploymentStartDateFormula__c</fullName>
        <formula>EmploymentPeriod__r.StartDate__c</formula>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntityLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location where the survey was taken</description>
        <inlineHelpText>The location where the survey was taken</inlineHelpText>
        <label>Entity Location</label>
        <referenceTo>EntityLocation__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Five9SessionID__c</fullName>
        <externalId>true</externalId>
        <label>Five9 Session ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireStatusFormula__c</fullName>
        <formula>TEXT(EmploymentPeriod__r.Status__c)</formula>
        <label>Hire Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdatedDate__c</fullName>
        <description>When the respondent last submitted the survey</description>
        <inlineHelpText>When the respondent last submitted the survey</inlineHelpText>
        <label>Last Updated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReportedHireDate__c</fullName>
        <description>The hire date reported by the employee</description>
        <inlineHelpText>The hire date reported by the employee</inlineHelpText>
        <label>Reported Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF1EmployeeSurveyID__c</fullName>
        <label>SF1EmployeeSurveyID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyDate__c</fullName>
        <description>When the respondent first submitted the survey</description>
        <inlineHelpText>When the respondent first submitted the survey</inlineHelpText>
        <label>Survey Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SurveyProjectFormula__c</fullName>
        <formula>EmploymentPeriod__r.SurveyProject__r.Name</formula>
        <label>Survey Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyResultGenerated__c</fullName>
        <defaultValue>&apos;Did Not Qualify&apos;</defaultValue>
        <description>A summary of the result of this survey: qualified, did not qualify, or declined.</description>
        <inlineHelpText>A summary of the result of this survey: qualified, did not qualify, or declined.</inlineHelpText>
        <label>Survey Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveySource__c</fullName>
        <description>The source of the survey</description>
        <inlineHelpText>The source of the survey</inlineHelpText>
        <label>Survey Source</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Seat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Employee Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmploymentPeriod__c</columns>
        <columns>EntityLocation__c</columns>
        <columns>ReportedHireDate__c</columns>
        <columns>SurveyDate__c</columns>
        <columns>SurveySource__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>